fixed : navbar & header overlapping

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -3,8 +3,11 @@
   width: 100%;
   gap: 1.5rem;
   align-items: center;
+  // height: 50px;
+  min-height: 50px;
   margin-bottom: 1rem;
   padding-inline: 0.5rem;
+
 
 
   .campaignName {
@@ -16,6 +19,10 @@
     font-size: 1.2rem;
     font-weight: 500;
     letter-spacing: 0.5px;
+  }
+
+  h1 {
+    font-size: min(5vw, 2rem);
   }
 
   h1,
@@ -43,8 +50,12 @@
     position: sticky;
     top: 0.75rem;
     z-index: 999;
-    margin: -5rem 0 0 3rem;
+    margin: -50px 0 0 40px;
     width: auto;
-    color: white
+
+
+    color: white;
+
+
   }
 }
